# android-ndk-conan-sample

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  conan_android_toolchain.cmake  conanfile.py  conanfile.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
